Fix wrapping on layout builder form

--- a/css/style.css
+++ b/css/style.css
@@ -7513,6 +7513,11 @@ ul {
   margin-bottom: 0;
 }
 
+figure {
+  display: grid;
+  width: min-content;
+}
+
 .container-fluid {
   max-width: 1200px;
 }
@@ -7525,6 +7530,44 @@ ul {
 .align-center img {
   margin-left: auto;
   margin-right: auto;
+}
+
+figure.align-left {
+  float: left;
+  display: grid;
+  width: min-content;
+  shape-outside: polygon(0 0, 84% 0, 97% 80%, 97% 100%, 0% 100%) border-box;
+  shape-margin: 1em;
+}
+
+figure.align-right {
+  float: right;
+  display: grid;
+  width: min-content;
+  shape-outside: polygon(16% 0%, 100% 0%, 100% 100%, 0% 100%, -3% 88%) border-box;
+  shape-margin: 1em;
+}
+
+[data-entity-embed-display-settings*=rotate_left] picture,
+[data-entity-embed-display-settings*=rotated_left] picture {
+  display: grid;
+  width: max-content;
+}
+[data-entity-embed-display-settings*=rotate_left] img,
+[data-entity-embed-display-settings*=rotated_left] img {
+  transform: rotate(-7deg);
+  padding: 6% 10% 6% 6%;
+}
+
+[data-entity-embed-display-settings*=rotate_right] picture,
+[data-entity-embed-display-settings*=rotated_right] picture {
+  display: grid;
+  width: max-content;
+}
+[data-entity-embed-display-settings*=rotate_right] img,
+[data-entity-embed-display-settings*=rotated_right] img {
+  transform: rotate(7deg);
+  padding: 6% 10% 6% 6%;
 }
 
 figure,
@@ -7849,6 +7892,10 @@ nav.tabs {
 }
 
 /********************* LAYOUTS *********************/
+#layout-builder .layout {
+  flex-wrap: nowrap;
+}
+
 .layout {
   position: relative;
   margin-bottom: 1em;
